data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3811.wast
;; 10. **Test with Empty `br_table` Index Array**:     - **Description**: Provide an empty index array to `br_table` to examine how each implementation handles the lack of branch targets.     - **Constraint Checked**: Handling of empty or invalid target sets.     - **Edge Case Relation**: Tests the robustness of the engine in handling `br_table` without any valid targets, looking for proper trap or error handling.

(assert_invalid
  (module
    (func $empty-br_table-index-array
      (block (br_table 0 (br_table)))
    )
  )
  "empty index array"
)